--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class = title >Tia's Calculator</div>
-    <input type="button" id="dayNight" value="Day Mode" onclick="toggleDayNight(event)"/>
+    <input type="button" id="dayNight" value="Day Mode" onclick="toggleDayNight()"/>
     <table border="1">
        <tr>
           <td colspan="3"><input type="text" id="result"/></td>
